--- a/package.json
+++ b/package.json
@@ -8,26 +8,17 @@
     "LED",
     "module"
   ],
-  "author": "Jamie Curnow",
+  "scripts": {
+    "postinstall": "./postinstall"
+  },
+  "author": "Robert Alexa",
   "license": "MIT",
   "dependencies": {
     "ajv": "latest",
     "async": "latest",
     "body-parser": "latest",
     "color": "latest",
-    "lpd8806-async": "github:Trekky12/LPD8806-node",
     "nan": "latest",
-    "rpi-ws2801": "github:Trekky12/node-rpi-ws2801"
-  },
-  "overrides": {
-    "lpd8806-async": {
-        "spi-device": "latest"
-    },
-    "rpi-ws2801": {
-        "spi-device": "latest"
-    },
-    "spi-device": {
-        "nan": "latest"
-    }
+    "ws2801-pi": "latest"
   }
 }
